--- a/css/general.css
+++ b/css/general.css
@@ -40,12 +40,130 @@ body {
 }
 
 /* Navbar - mobil */
-nav li {
+.header {
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+.navbar-link-container, #cart {
     display: none;
 }
 
-nav li:first-child, nav li:last-child {
-    display: inline-block;
+.navbar a, .donation, .dropbtn, .mobile-dropdown-btn {
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: ibm-plex-med;
+}
+
+.icon {
+    display: block;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 5vw;
+    position: relative;
+}
+
+.logo {
+    height: 80px;
+    width: auto;
+}
+
+/* Burger */
+#burgermenu-links {
+    display: none;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 100vw;
+    height: calc(100vh - 80px);
+    background-color: white;
+    flex-direction: column;
+    z-index: 999;
+    padding: 0;
+    margin: 0;
+    overflow-y: auto;
+}
+
+#burgermenu-links a {
+    color: var(--orange);
+    padding: 20px 5vw;
+    text-decoration: none;
+    font-size: 18px;
+    display: block;
+    border-bottom: 1px solid #eee;
+    text-transform: uppercase;
+}
+
+#burgermenu-links a:first-child {
+    border-top: 1px solid #eee;
+}
+
+/* Mobil dropdown styles */
+#burgermenu-links .mobile-dropdown {
+    border-bottom: 1px solid #eee;
+}
+
+#burgermenu-links .mobile-dropdown-btn {
+    width: 100%;
+    text-align: left;
+    background: none;
+    border: none;
+    color: var(--orange);
+    padding: 20px 5vw;
+    font-size: 18px;
+    text-transform: uppercase;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#burgermenu-links .mobile-dropdown-content {
+    display: none;
+    background-color: #f9f9f9;
+}
+
+#burgermenu-links .mobile-dropdown-content a {
+    padding: 15px 5vw 15px 10vw;
+    font-size: 16px;
+    border-bottom: 1px solid #eee;
+}
+
+#burgermenu-links .mobile-dropdown-content a:last-child {
+    border-bottom: none;
+}
+
+#burgermenu-links .mobile-dropdown.active .mobile-dropdown-content {
+    display: block;
+}
+
+#burgermenu-links .mobile-dropdown.active .arrow-icon {
+    transform: rotate(180deg);
+}
+
+/* Donation */
+.arrow-icon {
+    transition: transform 0.3s ease;
+    font-size: 12px;
+}
+
+.donationBar {
+    background-color: var(--orange);
+    padding: 5px 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.arrow {
+    padding-right: 2vw;
 }
 
 /* Footer - mobil */
@@ -128,87 +246,49 @@ footer {
 
 @media screen and (min-width: 768px) {
     /* Navbar - desktop */
-    header {
-        position: sticky;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background-color: white;
-        z-index: 1000;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    nav {
-        overflow-x: hidden;
-    }
-
-    nav a {
-        text-decoration: none;
-        font-family: ibm-plex-med;
-        font-size: 16px;
-        color: black;
-        text-transform: uppercase;
-    }
-
-    nav ul a {
-        transition: color 0.3s ease;
-    }
-
-    nav ul a:hover {
-        color: var(--orange);
-    }
-
-    nav li {
-        display: inline-block;
-    }
-
-    nav li:last-child {
-        display: none;
+        .navbar #burgermenu-links, .icon {
+      display: none;
     }
     
-    nav ul {
-        list-style: none;
+    .navbar, .navbar-link-container, .nav-container {
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 2.5vw;
-        width: 100%;
+    }
+
+    .navbar a, .dropdown, .dropbtn {
+        transition: color 0.3s ease;
+        font-family: ibm-plex-med;
+        font-size: 16px;
+        color: black;
+    }
+
+    .navbar a:hover, .dropdown:hover, .dropbtn:hover {
+        color: var(--orange);
+    }
+
+    .navbar {
+        justify-content: space-between;
+        padding: 0 2vw;
         margin: 0;
-        padding: 15px 0;
-        padding-left: 3vw;
     }
 
-    nav ul li:last-child {
-        margin-left: 40vw;
+    .navbar-link-container {
+        gap: 3vw;
     }
 
-    nav img {
+    .logo {
         height: 70px;
         width: auto;
     }
 
-    nav svg {
+    #cart {
+        display: inline-block;
         height: 30px;
         width: auto;
     }
 
-    .donationBar {
-        background-color: var(--orange);
-        padding: 5px 0;
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    .donationContainer {
-        display: flex;
-        flex-direction: row;
-        gap: 2vw;
-        align-items: center;
-    }
-
     .donation {
-        margin-right: 15px;
-        font-size: 14px;
         transition: transform 0.3s ease;
     }
 
@@ -216,11 +296,43 @@ footer {
         transform: translateX(5px);
     }
 
+    /* Dropdown */
+    .dropdown {
+        float: left;
+        overflow: hidden;
+    }
 
-    .arrow {
-        height: 15px;
-        width: auto;
-        margin-left: 10px;
+    /* Dropdown knapper */
+    .dropdown .dropbtn {
+        border: none;
+        outline: none;
+        background-color: inherit;
+        font-family: inherit; 
+    }
+
+
+    /* Dropdown content */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: white;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    /* Links i dropdown */
+    .dropdown-content a {
+        float: none;
+        color: rgb(0, 0, 0);
+        padding: 12px 12px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
     }
 
     /* Footer - desktop */
