--- a/css/fn.css
+++ b/css/fn.css
@@ -1,35 +1,46 @@
-main {
-    margin: 20px;
+h1 {
+    text-align: center;
+    font-size: 54px;
 }
 
-.fn {
+h2 {
+    margin-bottom: 1vw;
+}
+
+.goal-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.goal {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 20px;
-    gap: 20px;
+    grid-template-columns: 1fr 2fr;
+    margin: 0 20vw 5vw;
+    align-items: center;
 }
 
-.fn img {
-    width: 90%;
+.goal:first-child {
+    margin-top: 0;
+}
+
+.goal-text {
+    margin-top: 0;
+}
+
+.goal-img-container {
+    width: 100%;
+    height: auto;
+}
+
+.goal-img {
+    width: 100%;
+    height: auto;
 }
 
 @media screen and (min-width: 768px) {
-    main {
-        margin: 150px;
-    }
-
-    div {
-        display: flex;
-        justify-content: center;
-    }
-
-    .fn img {
+    .goal-img {
         width: 50%;
-        object-fit: contain;
+        height: auto;
     }
-
-    h1 {
-        width: 45%;
-    }
-
-}
+} 
