--- a/css/index.css
+++ b/css/index.css
@@ -461,7 +461,7 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
-    margin-bottom: 20px;
+    margin: 20px 0;
     font-family: ibm-plex;
     font-size: 14px;
   }
